schema/testdata/validation_relationships_attr_related_field_must_be_type_this_model/schema.keel
model Author {
    fields {
        age Number
        written Post[]
    }
}

model Post {
    fields {
        author Author @relation(age)
    }
}
